CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #745)
	- Using the layout alignment controls on a menu widget
	  would cause FLUID to crash (STR #742)
	- Added QNX bug workaround for menu handling (STR #704)
	- Added Greg Ercolano's simple Fl_Input_Choice widget
	  which is a combination of the Fl_Input and
	  Fl_Menu_Button widgets (STR #650)
	- Fl_Multiline_Input now scrolls the full height of the
	  widget instead of 5 lines when the user presses PageUp
	  or PageDown (STR #727)
	- CMake build fixes (STR #724)
	- Fl_Browser::swap() didn't handle redraws properly when
	  the swapped lines had different heights (STR #729)
	- FL_MOUSEWHEEL events are now sent first to the widget
	  under the mouse pointer and then to the first widget
	  which accepts them. This is similar to the way
	  shortcut events are handled and is consistent with the
	  way the mouse wheel is handled by other toolkits.
	- Fl::wait() could block on WIN32 if the window was
	  deleted via Fl::delete_widget() (STR #679)
	- Fl_Preferences::RootNode did not find the user's home
	  directory on some non-US versions of Windows (STR
	  #720)
	- Fl_Window::hide() didn't delete the current clipping
	  region on WIN32, causing a GDI resource leak in some
	  situations (STR #723)
	- Removed a few warnings when compiling on OS X
	- Fl_Menu now draws the arrow more like other toolkits
	  and 2.0 (STR #651)
	- Fixed a VC++ compiler error in Fl_JPEG_Image.cxx (STR
	  #676)
	- FL_SHADOW_BOX/FRAME drew outside of the bounding box
	  (STR #694)
	- Fl_Widget::copy_label(NULL) didn't work (STR #707)
	- Fl_Choice now allows click selection like
	  Fl_Menu_Button and Fl_Menubar (STR #706)
	- Updated cmake support (STR #645)
	- Fl_Check_Browser didn't draw properly when inactive
	  (STR #681)
	- Removed some redundant code in Fl_Group::handle() (STR
	  #669)
	- The file chooser didn't always deactivate the OK
	  button when necessary (STR #653)