@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #745)
+	- Fl_JPEG_Image could still crash an app with a corrupt
+	  JPEG file (STR #739)
 	- Using the layout alignment controls on a menu widget
 	  would cause FLUID to crash (STR #742)
 	- Added QNX bug workaround for menu handling (STR #704)
